@@ -8,7 +8,13 @@ supervisor=supervise-daemon
 pidfile=/var/run/repositorg_uuid.pid
 
 command="/usr/bin/repositorg_uuid"
-command_args="${repositorg_args}"
 command_user="${RC_SVCNAME#*.}"
 
-output_log="/var/log/${RC_SVCNAME}/${RC_SVCNAME}.log"
+output_log="/var/log/${RC_SVCNAME}.log"
+
+start_pre() {
+        #  (Commands necessary to prepare to start the service)
+        # Ensure that our dirs are correct
+        checkpath --file --owner ${command_user}:${command_user} --mode 775 \
+                "/var/log/${RC_SVCNAME}.log"
+}
